--- a/package.json
+++ b/package.json
@@ -3,18 +3,57 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.9.10",
+    "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "babel-preset-react": "^6.24.1",
+    "filepond": "^4.13.4",
+    "filepond-plugin-file-poster": "^2.2.0",
+    "filepond-plugin-image-exif-orientation": "^1.0.7",
+    "filepond-plugin-image-preview": "^4.6.1",
+    "material-ui-icons": "^1.0.0-beta.36",
+    "ra-data-simple-rest": "^3.3.2",
     "react": "^16.13.1",
+    "react-admin": "^3.4.1",
+    "react-data-grid": "^7.0.0-canary.14",
     "react-dom": "^16.13.1",
+    "react-filepond": "^7.0.1",
     "react-scripts": "3.4.1"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.6.4",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/preset-env": "^7.6.3",
+    "@babel/preset-react": "^7.6.3",
+    "babel-loader": "^8.1.0",
+    "babel-plugin-react-css-modules": "^5.2.6",
+    "babel-plugin-transform-postcss": "^0.3.0",
+    "core-js": "^3.4.1",
+    "css-loader": "^3.0.0",
+    "exports-loader": "^0.7.0",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "imports-loader": "^0.8.0",
+    "json-loader": "^0.5.7",
+    "less": "^3.10.3",
+    "less-loader": "^5.0.0",
+    "mini-css-extract-plugin": "^0.8.0",
+    "react": "^16.11.0",
+    "react-dom": "^16.11.0",
+    "react-proxy-loader": "^0.3.5",
+    "style-loader": "^0.23.1",
+    "uglifyjs-webpack-plugin": "^2.2.0",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.9",
+    "whatwg-fetch": "^3.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "watch": "webpack --watch",
+    "build-lib": "webpack"
   },
   "eslintConfig": {
     "extends": "react-app"
