--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-data-grid": "^7.0.0-canary.14",
     "react-dom": "^16.13.1",
     "react-filepond": "^7.0.1",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "recharts": "^1.8.5"
   },
   "devDependencies": {
     "@babel/core": "^7.6.4",
