--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "filepond-plugin-image-preview": "^4.6.1",
     "material-ui-icons": "^1.0.0-beta.36",
     "ra-data-simple-rest": "^3.3.2",
+    "ra-input-json": "^0.2.8",
     "react": "^16.13.1",
     "react-admin": "^3.4.1",
     "react-data-grid": "^7.0.0-canary.14",
     "react-dom": "^16.13.1",
     "react-filepond": "^7.0.1",
+    "react-json-editor-ajrm": "^2.5.9",
     "react-scripts": "3.4.1",
     "recharts": "^1.8.5"
   },
