--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ra-input-json": "^0.2.8",
     "react": "^16.13.1",
     "react-admin": "^3.4.1",
+    "react-admin-import-csv": "^0.2.16",
     "react-data-grid": "^7.0.0-canary.14",
     "react-dom": "^16.13.1",
     "react-filepond": "^7.0.1",
