--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "filepond-plugin-image-exif-orientation": "^1.0.7",
     "filepond-plugin-image-preview": "^4.6.1",
     "material-ui-icons": "^1.0.0-beta.36",
+    "papaparse": "^5.2.0",
     "ra-data-simple-rest": "^3.3.2",
     "ra-input-json": "^0.2.8",
     "react": "^16.13.1",
