--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-dom": "^16.11.0",
     "react-proxy-loader": "^0.3.5",
     "style-loader": "^0.23.1",
+    "terser-webpack-plugin": "4.2.3",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack-cli": "^3.3.9",
     "whatwg-fetch": "^3.0.0"
