--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "react-json-editor-ajrm": "^2.5.9",
     "react-scripts": "3.4.1",
     "recharts": "^1.8.5",
-    "redux-mock-store": "^1.5.4"
   },
   "devDependencies": {
     "@babel/core": "^7.6.4",
@@ -63,7 +62,8 @@
     "terser-webpack-plugin": "4.2.3",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack-cli": "^3.3.9",
-    "whatwg-fetch": "^3.0.0"
+    "whatwg-fetch": "^3.0.0",
+    "redux-mock-store": "^1.5.4"
   },
   "scripts": {
     "start": "react-scripts start",
