--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "react-filepond": "^7.0.1",
     "react-json-editor-ajrm": "^2.5.9",
     "react-scripts": "3.4.1",
-    "recharts": "^1.8.5",
+    "recharts": "^1.8.5"
   },
   "devDependencies": {
     "@babel/core": "^7.6.4",
