--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "openstad-react-admin",
-  "version": "0.1.0",
+  "homepage": "https://github.com/owner/project#readme"
+  "version": "0.1.1",
   "private": false,
   "publishConfig": {
     "access": "public"
