update react admin github page

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "openstad-react-admin",
-  "homepage": "https://github.com/owner/project#readme"
+  "homepage": "https://github.com/Amsterdam/openstad-react-admin",
   "version": "0.1.1",
   "private": false,
   "publishConfig": {
