--- a/.travis.yml
+++ b/.travis.yml
@@ -8,12 +8,13 @@ install:
 script:
   - npm run test
   - npm run build-lib
+  - ls -l
 
 deploy:
   provider: npm
   skip_cleanup: true
   email: $NPM_EMAIL
   api_key: $NPM_AUTH_TOKEN
-  tag: next
+  tag: latest
   on:
     branch: master
