--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^7.1.2",
+    "axios": "^0.21.1",
     "babel-preset-react": "^6.24.1",
     "filepond": "^4.13.4",
     "filepond-plugin-file-poster": "^2.2.0",
