--- a/package.json
+++ b/package.json
@@ -56,16 +56,17 @@
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
     "mini-css-extract-plugin": "^0.8.0",
+    "prettier": "^2.2.1",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-proxy-loader": "^0.3.5",
     "react-test-renderer": "^17.0.1",
+    "redux-mock-store": "^1.5.4",
     "style-loader": "^0.23.1",
     "terser-webpack-plugin": "4.2.3",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack-cli": "^3.3.9",
-    "whatwg-fetch": "^3.0.0",
-    "redux-mock-store": "^1.5.4"
+    "whatwg-fetch": "^3.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
