Update react admin version and update some props for new version

--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "openstad-react-admin",
   "homepage": "https://github.com/Amsterdam/openstad-react-admin",
-  "version": "0.1.26",
+  "version": "0.1.27",
   "private": false,
   "publishConfig": {
     "access": "public"
   },
   "dependencies": {
     "@babel/runtime": "^7.11.2",
-    "@material-ui/core": "^4.9.10",
-    "@material-ui/icons": "^4.9.1",
+    "@material-ui/core": "^4.11.2",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^7.1.2",
@@ -21,15 +21,19 @@
     "filepond-plugin-image-preview": "^4.6.1",
     "material-ui-icons": "^1.0.0-beta.36",
     "papaparse": "^5.2.0",
-    "ra-data-simple-rest": "^3.3.2",
-    "ra-input-json": "^0.2.8",
+    "ra-core": "^3.14.4",
+    "ra-language-english": "^3.14.4",
     "react": "^16.13.1",
-    "react-admin": "3.12.5",
-    "react-admin-import-csv": "^0.2.16",
+    "react-admin": "3.14.4",
+    "react-admin-import-csv": "1.0.17",
     "react-data-grid": "^7.0.0-canary.14",
     "react-dom": "^16.13.1",
     "react-filepond": "^7.0.1",
     "react-json-editor-ajrm": "^2.5.9",
+    "react-redux": "^7.2.3",
+    "react-redux-router": "0.0.14",
+    "react-router": "^5.2.0",
+    "react-router-redux": "^4.0.8",
     "react-scripts": "3.4.1",
     "recharts": "^1.8.5"
   },
