--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "openstad-react-admin",
   "homepage": "https://github.com/Amsterdam/openstad-react-admin",
-  "version": "0.1.29",
+  "version": "0.1.30",
   "private": false,
   "publishConfig": {
     "access": "public"
@@ -13,44 +13,29 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^7.1.2",
-    "@types/inflection": "^1.5.28",
-    "@types/recharts": "^1.8.10",
     "axios": "^0.21.1",
     "babel-preset-react": "^6.24.1",
-    "data-generator-retail": "^3.9.0",
-    "fakerest": "^3.0.0",
-    "fetch-mock": "~6.3.0",
     "filepond": "^4.13.4",
     "filepond-plugin-file-poster": "^2.2.0",
     "filepond-plugin-image-exif-orientation": "^1.0.7",
     "filepond-plugin-image-preview": "^4.6.1",
-    "json-graphql-server": "~2.1.3",
     "material-ui-icons": "^1.0.0-beta.36",
     "papaparse": "^5.2.0",
-    "proxy-polyfill": "^0.3.0",
-    "ra-data-fakerest": "^3.9.0",
-    "ra-data-graphql-simple": "^3.9.0",
-    "ra-data-simple-rest": "^3.9.0",
-    "ra-i18n-polyglot": "^3.9.0",
-    "ra-input-json": "^0.2.8",
-    "ra-input-rich-text": "^3.9.0",
-    "ra-language-english": "^3.9.0",
-    "ra-language-french": "^3.9.0",
-    "ra-ui-materialui": "3.9.5",
-    "react": "^17.0.0",
-    "react-admin": "^3.9.0",
-    "react-admin-import-csv": "^0.2.16",
-    "react-app-polyfill": "^1.0.4",
-    "react-dom": "^17.0.0",
+    "ra-core": "^3.14.4",
+    "ra-language-english": "^3.14.4",
+    "react": "^16.13.1",
+    "react-admin": "3.14.4",
+    "react-admin-import-csv": "1.0.17",
+    "react-data-grid": "^7.0.0-canary.14",
+    "react-dom": "^16.13.1",
     "react-filepond": "^7.0.1",
     "react-json-editor-ajrm": "^2.5.9",
-    "react-redux": "^7.1.0",
-    "react-router": "^5.1.0",
-    "react-router-dom": "^5.1.0",
+    "react-redux": "^7.2.3",
+    "react-redux-router": "0.0.14",
+    "react-router": "^5.2.0",
     "react-router-redux": "^4.0.8",
-    "react-scripts": "^4.0.1",
-    "recharts": "^1.8.5",
-    "redux-saga": "^1.0.0"
+    "react-scripts": "3.4.1",
+    "recharts": "^1.8.5"
   },
   "devDependencies": {
     "@babel/core": "^7.6.4",
