--- a/.travis.yml
+++ b/.travis.yml
@@ -11,30 +11,30 @@ script:
   - npm run set-publish-version
 
 deploy:
-#  - provider: npm
-#    skip_cleanup: true
-#    local_dir: dist
-#    email: $NPM_EMAIL
-#    api_key: $NPM_AUTH_TOKEN
-#    overwrite: true
-#    tag: alpha
-#    on:
-#      branch: development
-#  - provider: npm
-#    skip_cleanup: true
-#    local_dir: dist
-#    email: $NPM_EMAIL
-#    api_key: $NPM_AUTH_TOKEN
-#    overwrite: true
-#    tag: beta
-#    on:
-#      branch: release
-#  - provider: npm
-#    skip_cleanup: true
-#    local_dir: dist
-#    email: $NPM_EMAIL
-#    api_key: $NPM_AUTH_TOKEN
-#    overwrite: true
-#    tag: latest
-#    on:
-#      branch: master
+  - provider: npm
+    skip_cleanup: true
+    local_dir: dist
+    email: $NPM_EMAIL
+    api_key: $NPM_AUTH_TOKEN
+    overwrite: true
+    tag: alpha
+    on:
+      branch: development
+  - provider: npm
+    skip_cleanup: true
+    local_dir: dist
+    email: $NPM_EMAIL
+    api_key: $NPM_AUTH_TOKEN
+    overwrite: true
+    tag: beta
+    on:
+      branch: release
+  - provider: npm
+    skip_cleanup: true
+    local_dir: dist
+    email: $NPM_EMAIL
+    api_key: $NPM_AUTH_TOKEN
+    overwrite: true
+    tag: latest
+    on:
+      branch: master
