--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^7.1.2",
-    "axios": "^0.21.4",
+    "axios": "^0.23.0",
     "babel-preset-react": "^6.24.1",
     "filepond": "^4.13.4",
     "filepond-plugin-file-poster": "^2.2.0",
@@ -34,7 +34,7 @@
     "react-redux-router": "0.0.14",
     "react-router": "^5.2.0",
     "react-router-redux": "^4.0.8",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^4.0.3",
     "recharts": "^1.8.5"
   },
   "devDependencies": {
