--- a/package.json
+++ b/package.json
@@ -86,7 +86,8 @@
     "production": [
       ">0.2%",
       "not dead",
-      "not op_mini all"
+      "not op_mini all",
+      "not ie <= 10"
     ],
     "development": [
       "last 1 chrome version",
