--- a/.github/workflows/build-dist.yml
+++ b/.github/workflows/build-dist.yml
@@ -23,7 +23,7 @@ jobs:
         uses: tj-actions/branch-names@v5
 
       # build dist
-      - run: npm run build
+      - run: npm run build-lib
           
       # set version number
       - run: npm run set-publish-version
