--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "openstad-react-admin",
+  "name": "@savvycodes/openstad-react-admin",
   "homepage": "https://github.com/Amsterdam/openstad-react-admin",
-  "version": "0.31.1",
+  "version": "0.33.0-beta.1",
   "private": false,
   "publishConfig": {
     "access": "public"
